Bug 392772 - c++ importer does not recognize c++ virtual keyword
Summary: c++ importer does not recognize c++ virtual keyword
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: importer (other bugs)
Version First Reported In: 2.24.3 (KDE Applications 17.12.3)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-04-05 19:09 UTC by Ralf Habacker
Modified: 2018-04-08 22:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.25.80 (KDE Applications 18.07.80)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2018-04-05 19:09:06 UTC
How to reproduce:
1. start umbrello
2. Import test/import/cxx/abstract-class.h from umbrello source
3. Open properties for imported methods in class 'NoAbstractClass'

What happens ?
There are no information displayed for the 'virtual' keyword

What is required ?
The virtual keyword should not be imported and displayed
Comment 1 Ralf Habacker 2018-04-05 19:42:45 UTC
s/not be imported/be imported/g
Comment 2 Ralf Habacker 2018-04-05 20:42:37 UTC
Git commit 2c9ee579550feb33a49d79bb500b6b110e46d52b by Ralf Habacker.
Committed on 05/04/2018 at 20:42.
Pushed by habacker into branch 'master'.

Fix 'c++ importer does not recognize c++ virtual keyword'
FIXED-IN: 2.25.80 (KDE Applications 17.07.80)

M  +16   -11   umbrello/codeimport/kdevcppparser/cpptree2uml.cpp
M  +5    -1    umbrello/dialogs/umloperationdialog.cpp
M  +1    -0    umbrello/dialogs/umloperationdialog.h
M  +19   -0    umbrello/uml1model/operation.cpp
M  +3    -0    umbrello/uml1model/operation.h
M  +2    -2    umbrello/version.h

https://commits.kde.org/umbrello/2c9ee579550feb33a49d79bb500b6b110e46d52b
Comment 3 Ralf Habacker 2018-04-08 22:34:12 UTC
Git commit 52f76814e04d7fb172b7220177f80749fdb8d7e3 by Ralf Habacker.
Committed on 08/04/2018 at 22:30.
Pushed by habacker into branch 'master'.

Fixup of commit 2c9ee5795 - document xmi attribute 'isVirtual'

The xmi 'isVirtual' attribute has been added by the associated commit
and is documented in uml-1.4-umbrello.dtd because it is umbrello-specific.

M  +2    -1    doc/xml/uml-1.4-umbrello.dtd

https://commits.kde.org/umbrello/52f76814e04d7fb172b7220177f80749fdb8d7e3