Fix 'c++ importer does not recognize c++ virtual keyword'

BUG:392772
FIXED-IN: 2.25.80 (KDE Applications 17.07.80)