umbrello/uml1model/operation.h
@@ -67,6 +67,8 @@ public:
     bool getConst() const;
     void setOverride(bool b);
     bool getOverride() const;
+    void setVirtual(bool b);
+    bool isVirtual() const;
 
     void setSourceCode(const QString& code);
     QString getSourceCode() const;
@@ -81,6 +83,7 @@ private:
     UMLAttributeList m_List;      ///< Parameter list
     bool             m_bConst;    ///< Holds the isQuery attribute of the <UML:Operation>
     bool             m_Override;  ///< Holds the override attribute of the <UML:Operation>
+    bool             m_virtual;   ///< Holds the virtual attribute of the <UML:Operation>
     QString          m_Code;      ///< Holds the entered source code
 };
 
